@@ -67,7 +67,8 @@ munin (work)
     * Added plugin generic/loggrep for generic log grepping.
     * Fixed bug in generic/sendmail_mailqueue, when queue is empty.
     * Fixed bug in generic/hddtemp2, patch by arturaz (SF#1037002).
-	* Added new plugin linux/forks, to graph forks per second.
+    * Added new plugin linux/forks, to graph forks per second.
+    * The linux/iostat plugin now ignores devices without traffic (Deb#267195).
 
   - Installation
     * Changed variable name of ARCH to OSTYPE, to avoid name crash on newer
